--- a/english-puzzle/src/index.html
+++ b/english-puzzle/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Canvas" />
     <meta name="author" lang="en" content="Andrei Poleshchuck" />
-    <title>Fancy weather</title>
+    <title>English puzzle</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="ico" href="./img/favicon.ico"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
