feat: add checking

--- a/english-puzzle/src/index.html
+++ b/english-puzzle/src/index.html
@@ -20,6 +20,7 @@
         <div class="puzzle-container">
             <div class="puzzle-container__results"></div>
             <div class="puzzle-container__workspace"></div>
+            <div class="puzzle-container__buttons-container"></div>
         </div>
     </div>
 </body> 
